SDKs/twilio.com/twilio_trusthub_v1/1.37.4/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()
    
    req := operations.CreateCustomerProfileRequest{
        Security: operations.CreateCustomerProfileSecurity{
            AccountSidAuthToken: shared.SchemeAccountSidAuthToken{
                Password: "YOUR_PASSWORD_HERE",
                Username: "YOUR_USERNAME_HERE",
            },
        },
        Request: &operations.CreateCustomerProfileCreateCustomerProfileRequest{
            Email: "sit",
            FriendlyName: "voluptas",
            PolicySid: "culpa",
            StatusCallback: "expedita",
        },
    }
    
    res, err := s.CreateCustomerProfile(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.TrusthubV1CustomerProfile != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `CreateCustomerProfile` - Create a new Customer-Profile.
* `CreateCustomerProfileChannelEndpointAssignment` - Create a new Assigned Item.
* `CreateCustomerProfileEntityAssignment` - Create a new Assigned Item.
* `CreateCustomerProfileEvaluation` - Create a new Evaluation
* `CreateEndUser` - Create a new End User.
* `CreateSupportingDocument` - Create a new Supporting Document.
* `CreateTrustProduct` - Create a new Customer-Profile.
* `CreateTrustProductChannelEndpointAssignment` - Create a new Assigned Item.
* `CreateTrustProductEntityAssignment` - Create a new Assigned Item.
* `CreateTrustProductEvaluation` - Create a new Evaluation
* `DeleteCustomerProfile` - Delete a specific Customer-Profile.
* `DeleteCustomerProfileChannelEndpointAssignment` - Remove an Assignment Item Instance.
* `DeleteCustomerProfileEntityAssignment` - Remove an Assignment Item Instance.
* `DeleteEndUser` - Delete a specific End User.
* `DeleteSupportingDocument` - Delete a specific Supporting Document.
* `DeleteTrustProduct` - Delete a specific Customer-Profile.
* `DeleteTrustProductChannelEndpointAssignment` - Remove an Assignment Item Instance.
* `DeleteTrustProductEntityAssignment` - Remove an Assignment Item Instance.
* `FetchCustomerProfile` - Fetch a specific Customer-Profile instance.
* `FetchCustomerProfileChannelEndpointAssignment` - Fetch specific Assigned Item Instance.
* `FetchCustomerProfileEntityAssignment` - Fetch specific Assigned Item Instance.
* `FetchCustomerProfileEvaluation` - Fetch specific Evaluation Instance.
* `FetchEndUser` - Fetch specific End User Instance.
* `FetchEndUserType` - Fetch a specific End-User Type Instance.
* `FetchPolicies` - Fetch specific Policy Instance.
* `FetchSupportingDocument` - Fetch specific Supporting Document Instance.
* `FetchSupportingDocumentType` - Fetch a specific Supporting Document Type Instance.
* `FetchTrustProduct` - Fetch a specific Customer-Profile instance.
* `FetchTrustProductChannelEndpointAssignment` - Fetch specific Assigned Item Instance.
* `FetchTrustProductEntityAssignment` - Fetch specific Assigned Item Instance.
* `FetchTrustProductEvaluation` - Fetch specific Evaluation Instance.
* `ListCustomerProfile` - Retrieve a list of all Customer-Profiles for an account.
* `ListCustomerProfileChannelEndpointAssignment` - Retrieve a list of all Assigned Items for an account.
* `ListCustomerProfileEntityAssignment` - Retrieve a list of all Assigned Items for an account.
* `ListCustomerProfileEvaluation` - Retrieve a list of Evaluations associated to the customer_profile resource.
* `ListEndUser` - Retrieve a list of all End User for an account.
* `ListEndUserType` - Retrieve a list of all End-User Types.
* `ListPolicies` - Retrieve a list of all Policys.
* `ListSupportingDocument` - Retrieve a list of all Supporting Document for an account.
* `ListSupportingDocumentType` - Retrieve a list of all Supporting Document Types.
* `ListTrustProduct` - Retrieve a list of all Customer-Profiles for an account.
* `ListTrustProductChannelEndpointAssignment` - Retrieve a list of all Assigned Items for an account.
* `ListTrustProductEntityAssignment` - Retrieve a list of all Assigned Items for an account.
* `ListTrustProductEvaluation` - Retrieve a list of Evaluations associated to the trust_product resource.
* `UpdateCustomerProfile` - Updates a Customer-Profile in an account.
* `UpdateEndUser` - Update an existing End User.
* `UpdateSupportingDocument` - Update an existing Supporting Document.
* `UpdateTrustProduct` - Updates a Customer-Profile in an account.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
